--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^5.1.0",
     "mongoose": "^8.16.1",
     "nanoid": "^5.1.5",
-    "qr": "^0.5.0"
+    "qr": "^0.5.0",
+    "qrcode": "^1.5.4"
   }
 }
