--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/ramajan-tahashildar/URL_Shortener#readme",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "code": "^5.2.4",
     "dotenv": "^17.0.1",
     "ejs": "^3.1.10",
@@ -26,6 +27,7 @@
     "mongoose": "^8.16.1",
     "nanoid": "^5.1.5",
     "qr": "^0.5.0",
-    "qrcode": "^1.5.4"
+    "qrcode": "^1.5.4",
+    "uuid": "^11.1.0"
   }
 }
